# natvar

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
data/: genome_file_paths.txt  genome_file_paths_subset_100.txt  query_list_0_25.txt  query_list_130_160.txt  search.csv
data/dataset_ecoli/: assemblyids.tsv
data/dataset_entero/: assemblyids.tsv
data/genome_batches/: group_0.txt  group_1.txt  group_10.txt  group_11.txt  group_12.txt  group_13.txt  group_14.txt  group_15.txt  group_16.txt  group_17.txt  group_18.txt  group_19.txt  group_2.txt  group_20.txt  group_21.txt  group_22.txt  group_23.txt  group_24.txt  group_25.txt  group_26.txt  group_27.txt  group_28.txt  group_29.txt  group_3.txt  group_30.txt  group_31.txt  group_32.txt  group_33.txt  group_34.txt  group_35.txt  group_36.txt  group_37.txt  group_38.txt  group_39.txt  group_4.txt  group_40.txt  group_41.txt  group_42.txt  group_43.txt  group_44.txt  (+47 more)
data/genome_sizes/: genome_lengths.npy
data/queries/: query_list_0_30_rc.txt  (+1 more)
natvar/: __main__.py  core.py  helpers.py  io.py  main.py  multiquery_genome_batch.py  query_genome.py  query_genome_batch.py  read_genome_sizes.py
notebooks/: entropies.py  nb.ipynb  nb_explore_multiquery_results.ipynb
scripts/: compile_ecoli_data.sh  compile_entero_data.sh  read_genome_sizes.sh  sort_genomes_into_batches.py  splice_wildtype_sequences.sh
tests/: conftest.py  test_core.py  test_gpu_availability.py  test_io.py  test_jax_core.py  test_multiquery_genome_batch.py  test_query_genome.py  test_query_genome_batch.py  test_read_genome_sizes.py
(+114 files in other folders)
